[SNAPSHOT]
- BREAKING: Added generic methods "addEffect" to BoomChannel, and removed specialized ones such as "addReverb".
- Channels can have two effects at once instead of just one.
- Improved error handling after all sensitive OpenAL calls.
- Added new effects: Auto Wah, Chorus, Compressor, Flanger, Pitch Shifter, Ring Modulator, and Vocal Morpher.
- Updated libGDX from 1.9.11 to 1.11.0.