@@ -2,6 +2,7 @@ package com.rafaskoberg.boom;
 
 import com.badlogic.gdx.utils.Disposable;
 import com.rafaskoberg.boom.effect.BoomEffect;
+import com.rafaskoberg.boom.filter.BoomFilterLwjgl3;
 import com.rafaskoberg.boom.util.BoomError;
 
 import static org.lwjgl.openal.EXTEfx.*;
@@ -20,6 +21,9 @@ public abstract class BoomEffectLwjgl3 extends BoomEffect implements Disposable 
 
         // Check for errors
         BoomError.check("Error while creating a BoomEffect");
+
+        // Create filter
+        this.filter = new BoomFilterLwjgl3();
     }
 
     @Override
@@ -27,6 +31,7 @@ public abstract class BoomEffectLwjgl3 extends BoomEffect implements Disposable 
         // Dispose
         alDeleteAuxiliaryEffectSlots(alAuxSlot);
         alDeleteEffects(alEffect);
+        ((BoomFilterLwjgl3) filter).dispose();
 
         // Check for errors
         BoomError.check("Error while disposing a BoomEffect");
